--- a/package.json
+++ b/package.json
@@ -1,34 +1,23 @@
 {
-  "name": "newsfeed-api",
+  "name": "hacker-news-clone",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "node server.js",
     "seeds": "node seeds/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
-    "connect-session-sequelize": "^7.1.1",
+    "connect-session-sequelize": "^6.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.2",
-    "express-session": "^1.17.1",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
+    "handlebars": "^4.7.3",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5"
-  },
-  "devDependencies": {
-    "jest": "^25.1.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ttheis1611/just-tech-news.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ttheis1611/just-tech-news/issues"
-  },
-  "homepage": "https://github.com/ttheis1611/just-tech-news#readme"
+  }
 }
